# MBition

./: CMakeLists.txt  DOCUMENTATION.pages  citydict.txt  gtp3.py  main.cpp  parser.cpp  parser.h
UnitTests/: GUnitTests.cpp
